[tool.poetry]
name = "diploma"
version = "0.1.0"
description = ""
authors = ["gleb165 <83755952+gleb165@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
pydantic = "^2.6.4"
beanie = "^1.25.0"
matplotlib = "^3.8.3"
torch = "^2.2.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
fastapi-mail = "^1.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
